# foundry-app

./: .gitignore  LICENSE  PROJECT.md  README.md  api.py  pyproject.toml  server.py
core/: README.md  __init__.py  discovery.py  event_messages.py  guardrails.py  platform.py  progress.py  registry.py  runtime.py  skill_parser.py  skill_resolver.py  skill_store.py
core/builtin_tools/: __init__.py  skills.py
core/contracts/: __init__.py  agent.py  execution.py  hooks.py  memory.py  models.py  skills.py  tools.py
core/execution/direct/: prompts.py  runtime.py
core/execution/orchestrated/: controller.py  models.py  prompts.py  runtime.py
core/execution/shared/: adk.py  models.py  tooling.py  usage.py
core/interfaces/: __init__.py  agent.py  skills.py  tools.py
core/memory/: __init__.py  context.py  manager.py  store.py  summarizer.py
core/runtime/: __init__.py  adk.py  engine.py  prompts.py  tooling.py  types.py
core/skills/: __init__.py  context.py  parser.py  resolver.py  store.py  uploads.py
core/stream/: messages.py  progress.py
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AgentPickerDrawer.jsx  ChatListSidebar.jsx  ChatPanel.jsx  Composer.jsx  ExecutionSteps.jsx  KnowledgeUploadCard.jsx  MarkdownContent.jsx  MessageItem.jsx  MessageList.jsx  NavigationRail.jsx  ResponseStreamingCard.jsx  SettingsModal.jsx
frontend/src/hooks/: useWorkspaceChat.js
frontend/src/lib/: aiPrompts.js  chatWorkspace.js  preferences.js
scripts/: create_agent_scaffold.py  dev_supervisor.py  install-related-tests-extension.sh  install_related_tests_extension.py  sync_embeddings.py
services/: __init__.py
services/ai/: __init__.py  service.py
src/: api.py  server.py
src/core/: platform.py
src/core/builtin_tools/: skills.py
src/core/contracts/: __init__.py  models.py
src/core/execution/: __init__.py
src/core/execution/direct/: prompts.py  runtime.py
src/core/execution/shared/: request_context.py  usage.py
src/core/execution/smart/: __init__.py  runtime.py
src/core/retrieval/: conversations.py  index.py  providers.py  scoring.py  service.py  skills.py  turns.py  types.py
src/core/skills/: __init__.py  resolver.py  store.py
src/foundry_app/: __init__.py  app.py  config.py  dev.py
src/services/conversations/: __init__.py  store.py
src/workspace/: README.md
tests/: test_agent_definitions.py  test_api.py  test_discovery_collaboration.py  test_event_messages.py  test_live_progress.py  test_orchestrated_writer.py  test_runtime_citations.py  test_runtime_guardrails.py  test_server.py  test_skill_parser.py  test_skill_resolver.py  test_skill_store.py  test_tool_contracts.py  test_web_tools.py
tests/core/: test_discovery.py  test_guardrails.py  test_platform.py  test_registry.py
tests/core/contracts/: test_agent.py  test_execution.py  test_hooks.py  test_memory.py  test_models.py  test_skills.py  test_tools.py
tests/core/execution/direct/: test_prompts.py  test_runtime.py
tests/core/execution/orchestrated/: test_runtime.py
tests/core/execution/shared/: test_models.py  test_tooling.py  test_usage.py
tests/core/memory/: test_manager.py
tests/core/skills/: test_parser.py  test_resolver.py  test_store.py  test_uploads.py
tests/core/stream/: test_messages.py  test_progress.py
tests/scripts/: test_create_agent_scaffold.py
tests/services/ai/: test_service.py
tests/services/conversations/: test_store.py
tests/vscode_related_tests/python/: test_related_tests_metadata.py
tests/workspace/agents/web/: test_answer.py  test_research.py
tests/workspace/tools/: test_web_search_strategy.py  test_web_tools.py
vscode-related-tests/: README.md  extension.js  package.json
vscode-related-tests/python/: related_tests_metadata.py
workspace/: README.md
workspace/agents/: general.py
workspace/agents/support/: triage.py
workspace/agents/web/: __init__.py  answer.py  hooks.py  research.py
workspace/skills/general/: persona.md  product.md
workspace/skills/support/: persona.md  policy.md  triage.md
workspace/tools/: skill_tools.py  system_tools.py  web_search_strategy.py  web_tools.py
