[project]
name = "foundryapp"
version = "0.1.0"
description = "Workspace repo for authored agents, tools, skills, and the app bootstrap."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "agentfoundry @ git+https://github.com/code-kp/agentfoundry.git@main",
  "poethepoet>=0.32.0",
  "pytest>=8.3.5",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["foundry_app*", "workspace*"]
exclude = ["tests*"]
namespaces = true

[tool.poe.tasks]
backend = "uvicorn foundry_app.app:app --app-dir src --reload --reload-dir src --reload-dir tests --reload-include '*.py' --reload-exclude '.venv/*' --reload-exclude '*/.venv/*' --reload-exclude 'venv/*' --reload-exclude '*/venv/*' --reload-exclude '*site-packages/*' --reload-exclude '__pycache__/*' --host 127.0.0.1 --port 8000"
new-agent = "uv run foundry-new-agent --workspace-root src/workspace --workspace-package workspace"
format = "ruff format ."
test = "uv run python -m pytest tests/workspace"
dev = "uv run poe backend"
stop = "uv run python src/foundry_app/dev.py stop"
embeddings-sync = "uv run foundry-sync-embeddings --workspace-root src/workspace --data-root ."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]
