[project]
name = "foundryapp"
version = "0.1.0"
description = "Workspace repo for authored agents, tools, skills, and the app bootstrap."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "agentfoundry @ git+https://github.com/code-kp/agentfoundry.git@main",
  "agentfoundry-ui @ git+https://github.com/code-kp/agentfoundry-ui.git@main",
  "pytest>=8.3.5",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["foundry_app*", "workspace*"]
exclude = ["tests*"]
namespaces = true

[tool.agentfoundry]
app = "foundry_app.app:app"
app_dir = "src"
workspace_root = "src/workspace"
workspace_package = "workspace"
data_root = "."
host = "127.0.0.1"
port = 8000
reload_dirs = ["src", "tests"]
test_paths = ["tests/workspace"]
format_targets = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]
